--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -10,6 +10,17 @@ jobs:
   aws_cdk:
     runs-on: ubuntu-latest
     steps:
+      - name: cdk bootstrap
+        id: bootstrap
+        uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
+        with:
+          cdk_subcommand: 'bootstrap'
+          actions_comment: true
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-east-1'
+
       - name: cdk diff
         id: diff
         uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
