--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -15,6 +15,7 @@ jobs:
         uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
         with:
           cdk_subcommand: 'bootstrap'
+          cdk_args: 'aws:://${{ secrets.AWS_ACCOUNT_ID }}/us-east-1'
           actions_comment: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
