--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -18,6 +18,7 @@ jobs:
           cdk_args: 'aws://117580903444/us-east-1'
           actions_comment: true
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'us-east-1'
