--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -15,7 +15,7 @@ jobs:
         uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
         with:
           cdk_subcommand: 'bootstrap'
-          cdk_args: 'aws://117580903444/us-east-1'
+          cdk_args: 'aws://117580903444/us-east-1 --cloudformation-execution-policies "arn:aws:iam::aws:policy/job-function/ViewOnlyAccess".'
           actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
