--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -30,6 +30,7 @@ jobs:
           cdk_subcommand: 'diff'
           actions_comment: true
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'us-east-1'
