--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -28,8 +28,8 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2.1.4
         with:
           cdk_subcommand: 'diff'
-          cdk_args: '--app "python app.py"'
-          cdk_stack: 'my-static-website-stack'
+          # cdk_args: '--app "python app.py"'
+          # cdk_stack: 'my-static-website-stack'
           actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
