--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -21,6 +21,22 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
+
+    - name: Set up Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: "16"
+
+    - name: Install Python dependencies and CDK
+      run: |
+        python -m pip install --upgrade pip
+        # install your Python dependencies here
+        npm install -g aws-cdk
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
