--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install Python dependencies and CDK
       run: |
         python -m pip install --upgrade pip
-        # install your Python dependencies here
+        pip install -r requirements.txt
         npm install -g aws-cdk
 
     - name: Configure AWS credentials
