--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   AWS_REGION: 'us-east-1'
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
 permissions:
   contents: read
@@ -40,7 +41,6 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        mask-aws-account-id: true
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
