--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 cdk.out
+.vscode/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
