--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -14,14 +14,18 @@ permissions:
   contents: read
 
 jobs:
-  difference:
-    name: Difference
+  checkout:
+    name: Checkout
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout
       uses: actions/checkout@v3
 
+  setup:
+    name: Setup
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
@@ -38,6 +42,11 @@ jobs:
         pip install -r requirements.txt
         npm install -g aws-cdk
 
+  config:
+    name: Configure
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -45,6 +54,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
 
+  difference:
+    name: Difference
+    runs-on: ubuntu-latest
+    needs: config
+    steps:
     - name: Diff
       run: |
         cdk diff
