--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,36 +7,23 @@ on:
     branches: [ "main" ]
 
 jobs:
-  aws_cdk:
+  difference:
+    name: Difference
     runs-on: ubuntu-latest
     steps:
 
-    - name: cdk diff
-      uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
-      with:
-        cdk_subcommand: 'diff'
-        actions_comment: true
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'us-east-1'
+    - name: Difference
+      uses: ./.github/workflows.yml
 
-    - name: cdk deploy
-      uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
-      with:
-        cdk_subcommand: 'deploy'
-        cdk_args: '--require-approval never'
-        actions_comment: false
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'us-east-1'
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: difference
+    steps:
 
-    - name: cdk synth
-      uses: arnaskro/aws-cdk-v2-github-actions@v2.3.0
-      with:
-        cdk_subcommand: 'synth'
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'us-east-1'
+    - name: Difference
+      uses: ./.github/workflows.yml
+    
+    - name: Deploy
+      run: |
+        cdk deploy --require-approval=never
