--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,23 +7,42 @@ on:
     branches: [ "main" ]
 
 jobs:
-  difference:
-    name: Difference
-    runs-on: ubuntu-latest
-    steps:
-
-    - name: Difference
-      uses: ./.github/workflows.yml
 
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: difference
-    steps:
 
-    - name: Difference
-      uses: ./.github/workflows.yml
-    
-    - name: Deploy
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
+
+    - name: Set up Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: "16"
+
+    - name: Install Python dependencies and CDK
       run: |
-        cdk deploy --require-approval=never
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        npm install -g aws-cdk
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Synth
+      run: |
+        cdk synth
+
+    - name: Diff
+      run: |
+        cdk deploy
