--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,14 @@ on:
   push:
     branches: [ "main" ]
 
-jobs:
+env:
+  AWS_REGION: 'us-east-1'
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
+permissions:
+  contents: read
+
+jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
