--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -9,6 +9,7 @@ on:
 env:
   AWS_REGION: 'us-east-1'
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  HOSTED_ZONE_ID: ${{ secrets.HOSTED_ZONE_ID }}
 
 permissions:
   contents: read
