--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ share/python-wheels/
 MANIFEST
 cdk.out
 .vscode/
+**/copilot-instructions.md
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
